================================================================================
CHANGELOG
================================================================================

0.3.6.4
	* Instruments get succesfully set when loading a midi file.
	* To set the channel and the velocity off a Note. Use Note.channel and 
	Note.velocity instead of the dynamics dictionary.

0.3.6.3
	* Removed channel parameters from the MidiFileOut and MidiTrack functions.
	The channel a note should be played on can now be set in Note.dynamics["channel"]

0.3.6.2
	* Enhanced MIDI file parsing.

0.3.6.1
	* Parsing of a Midi file works in some cases. Still very bugy.
	* Remove is_valid_duration from Bar, because it prevents using floating 
	point numbers, which you need when representing complex durations.

0.3.6.0
	* Initial check in of MidiFileIn

0.3.5.6
	* Moved the MidiFile class to MidiFileOut
	* Added more documentation to the MidiFileOut functions.

0.3.5.5
	* Killed bug in MidiTrack.play_Bar. Meters other than 4/4 will now also 
	get saved correctly
	* Added set_track_name and track_name_event to MidiTrack
	

0.3.5.4
	* Added MidiEvents for better readability in MidiTrack.
	* Added support for different time signatures (set_meter and time_signature_event)
	* Support for key signatures meta events (set_key and key_signature_event)

0.3.5.3
	* Added controller events to MidiTrack. Changing of the instrument is now
	possible.

0.3.5.2
	* Added fixes for rests, tempo and NoteContainers in MidiTrack.

0.3.5.1
	* Removed print statements used for debugging in MidiFileOut
	* Removed debugging spaghetti code when run as script from MidiFileOut
	* Moved the fluidsynth module to the midi package where it belongs.